force-app/main/default/objects/Entitlement/fields/ES_Entitlement_Id__c.field-meta.xml
<CustomField>
    <fullName>ES_Entitlement_Id__c</fullName>
    <externalId>true</externalId>
    <label>ES Entitlement Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>