force-app/main/default/objects/Entitlement/fields/Service_Level_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_Type__c</fullName>
    <label>Service Level Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>